Edit barcodes
